style: fix double v on mobile version

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -663,6 +663,10 @@ input[type="date"], input[type="time"], input[type="datetime-local"], input[type
   top: -0.625rem;
 }
 
+.-top-5 {
+  top: -1.25rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -697,6 +701,10 @@ input[type="date"], input[type="time"], input[type="datetime-local"], input[type
 
 .right-0 {
   right: 0px;
+}
+
+.right-2 {
+  right: 0.5rem;
 }
 
 .right-3 {
@@ -2787,6 +2795,10 @@ input[type="date"], input[type="time"], input[type="datetime-local"], input[type
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-white\/30 {
+  color: rgb(255 255 255 / 0.3);
 }
 
 .text-white\/50 {
